--- a/studio/package.json
+++ b/studio/package.json
@@ -13,18 +13,21 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^0.144",
-    "@sanity/cli": "^0.144",
-    "@sanity/components": "^0.144",
-    "@sanity/core": "^0.144",
-    "@sanity/dashboard": "^0.144",
-    "@sanity/default-layout": "^0.144",
-    "@sanity/default-login": "^0.144",
-    "@sanity/desk-tool": "^0.144",
+    "@sanity/base": "^0.145.0",
+    "@sanity/cli": "^0.145.0",
+    "@sanity/components": "^0.145.0",
+    "@sanity/core": "^0.145.0",
+    "@sanity/dashboard": "^0.145.0",
+    "@sanity/default-layout": "^0.145.0",
+    "@sanity/default-login": "^0.145.0",
+    "@sanity/desk-tool": "^0.145.0",
     "date-fns": "^1.30.1",
+    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-instagram-embed": "^1.5.0",
+    "react-youtube": "^7.9.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
   },
