--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,9 @@
     "react-helmet": "^5.2.1"
   },
   "dependencies": {
-    "gatsby-image": "^2.0.41"
+    "gatsby-image": "^2.0.41",
+    "get-youtube-id": "^1.0.1",
+    "react-instagram-embed": "^1.5.0",
+    "react-youtube": "^7.9.0"
   }
 }
