--- a/studio/package.json
+++ b/studio/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.8.6",
     "react-instagram-embed": "^1.5.0",
     "react-youtube": "^7.9.0",
+    "sanity-plugin-asset-source-thispersondoesnotexist": "0.0.1",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
