--- a/studio/package.json
+++ b/studio/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@sanity/base": "^0.147.3",
     "@sanity/cli": "^0.147.3",
+    "@sanity/code-input": "^0.147.0",
+    "@sanity/color-input": "^0.147.0",
     "@sanity/components": "^0.147.3",
     "@sanity/core": "^0.147.3",
     "@sanity/dashboard": "^0.147.3",
@@ -32,7 +34,8 @@
     "sanity-plugin-asset-source-thispersondoesnotexist": "0.0.1",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
-    "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
+    "sanity-plugin-mux-input": "^0.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
