--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Sanity <hello@sanity.io>",
   "scripts": {
+    "tailwind:css": "tailwind build src/css/tailwind.src.css -c  tailwind.js -o src/css/tailwind.css",
     "build": "gatsby build",
     "clean-cache": "gatsby clean",
     "dev": "npm run clean-cache && gatsby develop",
@@ -25,7 +26,7 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "gatsby": "^2.9.2",
-    "gatsby-plugin-postcss": "^2.0.7",
+    "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-source-sanity": "^4.0.3",
     "postcss-import": "^12.0.1",
@@ -33,7 +34,8 @@
     "prettier-eslint-cli": "^4.7.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.1.4"
   },
   "dependencies": {
     "gatsby-image": "^2.0.41",
