--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-google-analytics": "^2.1.34",
     "get-youtube-id": "^1.0.1",
     "react-instagram-embed": "^1.5.0",
     "react-youtube": "^7.9.0"
