--- a/studio/package.json
+++ b/studio/package.json
@@ -13,17 +13,17 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^0.147.3",
-    "@sanity/cli": "^0.147.3",
+    "@sanity/base": "^0.147.8",
+    "@sanity/cli": "^0.147.8",
     "@sanity/code-input": "^0.147.0",
     "@sanity/color-input": "^0.147.0",
-    "@sanity/components": "^0.147.3",
-    "@sanity/core": "^0.147.3",
-    "@sanity/dashboard": "^0.147.3",
-    "@sanity/default-layout": "^0.147.4",
+    "@sanity/components": "^0.147.9",
+    "@sanity/core": "^0.147.9",
+    "@sanity/dashboard": "^0.147.8",
+    "@sanity/default-layout": "^0.147.9",
     "@sanity/default-login": "^0.147.0",
-    "@sanity/desk-tool": "^0.147.5",
-    "@sanity/vision": "^0.147.4",
+    "@sanity/desk-tool": "^0.147.9",
+    "@sanity/vision": "^0.147.9",
     "date-fns": "^1.30.1",
     "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7.2",
@@ -35,6 +35,7 @@
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
+    "sanity-plugin-google-analytics": "^0.2.6",
     "sanity-plugin-mux-input": "^0.2.1"
   },
   "devDependencies": {
