--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "^1.1.4"
   },
   "dependencies": {
+    "@sanity/client": "^0.147.3",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-google-analytics": "^2.1.34",
     "gatsby-plugin-sharp": "^2.4.4",
