--- a/studio/package.json
+++ b/studio/package.json
@@ -25,12 +25,11 @@
     "@sanity/desk-tool": "^0.147.9",
     "@sanity/vision": "^0.147.9",
     "date-fns": "^1.30.1",
-    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-instagram-embed": "^1.5.0",
-    "react-youtube": "^7.9.0",
+    "react-player": "^1.15.2",
     "sanity-plugin-asset-source-thispersondoesnotexist": "0.0.1",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
