--- a/web/package.json
+++ b/web/package.json
@@ -44,8 +44,7 @@
     "gatsby-plugin-sharp": "^2.4.4",
     "gatsby-source-filesystem": "^2.1.47",
     "gatsby-transformer-sharp": "^2.3.13",
-    "get-youtube-id": "^1.0.1",
     "react-instagram-embed": "^1.5.0",
-    "react-youtube": "^7.9.0"
+    "react-player": "^1.15.2"
   }
 }
