--- a/studio/package.json
+++ b/studio/package.json
@@ -13,17 +13,18 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "1.148.5-document-actions.23",
-    "@sanity/cli": "1.148.5-document-actions.23",
-    "@sanity/code-input": "1.148.5-document-actions.23",
-    "@sanity/color-input": "1.148.5-document-actions.23",
-    "@sanity/components": "1.148.5-document-actions.23",
-    "@sanity/core": "1.148.5-document-actions.23",
-    "@sanity/dashboard": "1.148.5-document-actions.23",
-    "@sanity/default-layout": "1.148.5-document-actions.23",
-    "@sanity/default-login": "1.148.5-document-actions.23",
-    "@sanity/desk-tool": "1.148.5-document-actions.23",
-    "@sanity/vision": "1.148.5-document-actions.23",
+    "@sanity/base": "^1.148.5",
+    "@sanity/cli": "^1.148.6",
+    "@sanity/code-input": "^1.148.1",
+    "@sanity/color-input": "^1.148.1",
+    "@sanity/components": "^1.148.5",
+    "@sanity/core": "^1.148.5",
+    "@sanity/dashboard": "^1.148.5",
+    "@sanity/default-layout": "^1.148.5",
+    "@sanity/default-login": "^1.148.1",
+    "@sanity/desk-tool": "^1.148.6",
+    "@sanity/production-preview": "^1.148.1",
+    "@sanity/vision": "^1.148.1",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
